<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"

    android:padding="64dp">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:src="@drawable/eele_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </ImageView>

    <Button
        android:id="@+id/buttonShutdownAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/imageViewLogo"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayoutTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:text="@string/shutdown_all"
        android:textSize="24sp"
        android:backgroundTint="@color/black">
    </Button>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewPlugLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:text="@string/plug"
            android:textSize="16sp"
            android:textAlignment="center"

            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/textViewCameraLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </TextView>
        <TextView
            android:id="@+id/textViewPlugInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@id/textViewPlugLabel"
            app:layout_constraintStart_toStartOf="@id/textViewPlugLabel"
            app:layout_constraintEnd_toEndOf="@id/textViewPlugLabel"
            app:layout_constraintBottom_toBottomOf="parent"

            android:textAlignment="center">
        </TextView>

        <TextView
            android:id="@+id/textViewCameraLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:text="@string/camera"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAlignment="center"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewPlugLabel"
            app:layout_constraintTop_toTopOf="parent">
        </TextView>
        <TextView
            android:id="@+id/textViewCameraInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@id/textViewCameraLabel"
            app:layout_constraintStart_toStartOf="@id/textViewCameraLabel"
            app:layout_constraintEnd_toEndOf="@id/textViewCameraLabel"
            app:layout_constraintBottom_toBottomOf="parent"

            android:textAlignment="center">
        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>